--- a/src/app/auth/components/login/login.css
+++ b/src/app/auth/components/login/login.css
@@ -4,7 +4,7 @@ body, html {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     .bg-container {
-      background-image: url('../../../assets/Software.jpg'); /* full page background */
+      background-image: url('/assets/Software.jpg'); /* full page background */
       background-size: cover;
       background-position: center;
       height: 100vh;
